# PSX-Minecraft

./: .clang-format  .clangd  .gdbinit  .gitignore  .old-clangd  :w  BLOG.md  CMakeLists.bundles.txt  CMakeLists.txt  CMakePresets.json  Dockerfile  LICENSE  README.md  TODO.md  asset_bundler.py  assets.xml  build_container.sh  build_image.sh  bundles.cmake  cclangd  closest_vertex  compile_flags.cmake  create_release.sh  debug_container.sh  diamond_angles  font  frustum.ggb  frustum_calculator.py  generate_include_graph.sh  gui.xml  iso.xml  iter  logger.ini  main.c  out.txt  refactor.py  span_3d_example.txt  start_clangd.sh  start_container.sh  static.xml  (+2 more)
.githooks/: order_todo.lua  pre-commit
assets/: _gui.xml  _static.xml  blocks.tim_old  font.tim  font_shadowed.tim  gui.tim  gui.xml  items.tim  menu.xml  recipes.json  recipes.schema.json  start.xml  static.xml  terrain.tim  weather.tim
assets/gui/: crafting.tim  crafting_table.tim  gui.tim  inventory.tim
assets/menu/: logo.tim
assets/recipes/: recipes.schema.json
assets/start/: mojang.tim
assets/static/: gui.tim.old  gui_part.tim  items.tim  moon.tim  sun.tim  terrain.tim_8bit  weather.tim
docs/: WIP.md  dual_angle_frustum_culling  frustum.ggb
scripts/: asset_bundler.py  curve_sampler.py  frustum_calculator.py  generate_include_graph.sh  recipe_tree.py  recipes.schema.json  refactor.py  requirements.txt  resource_generator.py
scripts/templates/: block.c.j2  block.h.j2  item_block.c.j2  item_block.h.j2  recipe_tree.c.j2  recipe_tree.h.j2
src/: assets.h  main.c  test.h  test_recipe.c  test_recipe.h
src/blocks/: block.c  block.h  cube.c  cube.h
src/core/: app_logic.h  camera.c  camera.h  console.c  console.h  display.c  display.h  engine.c  engine.h  input.c  input.h
src/core/input/: bindings.c  bindings.h  input.c  input.h  input_handler.h
src/core/std/: stdlib.h
src/debug/: debug.h  debug_defines.h  pcsx.c  pcsx.h
src/entity/: entity.c  entity.h  player.c  player.h
src/game/: minecraft.c  minecraft.h
src/game/blocks/: block.c  block.h  block_air.c  block_air.h  block_cobblestone.c  block_cobblestone.h  block_crafting_table.c  block_crafting_table.h  block_dirt.c  block_dirt.h  block_grass.c  block_grass.h  block_id.c  block_id.h  block_plank.c  block_plank.h  block_stone.c  block_stone.h  block_test.c  block_test.h  blocks.c  blocks.h  breaking_state.c  breaking_state.h  stone_block.c  stone_block.h
src/game/entity/: player.c  player.h
src/game/gui/: hotbar.c  hotbar.h  inventory.c  inventory.h  notes.md  slot.c  slot.h  slot_groups.md  utils.c  utils.h
src/game/inventory/: inventory.h
src/game/items/: item.c  item.h  item_block.c  item_block.h  item_block_cobblestone.c  item_block_cobblestone.h  item_block_dirt.c  item_block_dirt.h  item_block_grass.c  item_block_grass.h  item_block_stone.c  item_block_stone.h  item_id.c  item_id.h  items.c  items.h
src/game/items/blocks/: item_block.c  item_block.h  item_block_cobblestone.c  item_block_cobblestone.h  item_block_crafting_table.c  item_block_crafting_table.h  item_block_dirt.c  item_block_dirt.h  item_block_grass.c  item_block_grass.h  (+4 more)
src/game/menu/: main.c  main.h  menu.c  menu.h  menu_id.h  menus.c  menus.h  singleplayer.c  singleplayer.h
src/game/recipe/: crafting.c  crafting.h  crafting.json  crafting_table.c  crafting_table.h  crafting_table.json  crafting_table_recipes.h  recipe.c  recipe.h  recipe_tree_patterns.md
src/game/save/: manager.c  manager.h  save.c  save.h
src/game/weather/: weather.c  weather.h
src/game/world/: chunk_rendering.md  continuous_shifting_world_loading.md  frustum_culling.md  position.c  position.h  world.c  world.h  world_defines.h  world_raycast.c  world_raycast.h  world_structure.h
src/hardware/: card.h  card.s  cd.c  cd.h  clock.h  counters.h  spi.c  spi.h
src/lighting/: lightmap.c  lightmap.h
src/logging/: logging.c  logging.h
src/math/: fixed_point.c  fixed_point.h  fptc.h  math_utils.c  math_utils.h  taxicab.c  taxicab.h  vector.c  vector.h
src/physics/: aabb.c  aabb.h  physics.md  physics_object.c  physics_object.h
src/primitive/: clip.c  clip.h  cube.c  cube.h  line.c  line.h  primitive.c  primitive.h
src/render/: buffer.c  buffer.h  commands.h  debug.c  debug.h  debug_defines.h  duration_tree.c  duration_tree.h  font.c  font.h  frustum.c  frustum.h  frustum_culling.md  render_context.c  render_context.h  renderable.h  subdivide.c  subdivide.h  transforms.h
src/resources/: asset_indices.h  assets.c  assets.h  colour.h  texture.c  texture.h
src/structure/: circular_buffer.h  cvector.h  cvector_utils.h  hashmap.c  hashmap.h
src/structure/primitive/: clip.c  clip.h  cube.c  cube.h  cube_layout.md  direction.c  direction.h  plane.c  plane.h  primitive.c  primitive.h
src/ui/: axis.c  axis.h  background.c  background.h  crosshair.c  crosshair.h  cursor.h  progress_bar.c  progress_bar.h  ui.c  ui.h
src/ui/components/: background.c  background.h  button.c  button.h  cursor.c  cursor.h
src/util/: allocation.c  allocation.h  bits.c  bits.h  byte_checksum.c  byte_checksum.h  circular_buffer.c  circular_buffer.h  coroutines.h  cvector.h  debounce.c  debounce.h  fast_noise_lite.h  interface99_extensions.h  inttypes.h  math_utils.c  math_utils.h  memory.c  memory.h  preprocessor.h
src/weather/: weather.c  weather.h
src/world/: position.c  position.h  test.h  world.c  world.h  world_load_debug.h
src/world/chunk/: chunk.c  chunk.h  chunk_mesh.c  chunk_mesh.h
testing/: alt_physics_object.c  angles.h  binary_span_visibility.c  closest_chunk_vertex.c  composition_inheritance.h  compress.c  compress_2.c  cvector.h  diamond_angles.c  font.c  hashmap.h  iter.c  precompute_sun_pos.py  recipe.c  test.h  test.py  texture_window.c  texture_window.rs  visibility_bfs_scan_walk.py  voxel_graph.c
tools/menu_designer/: README.md  main.py  pyproject.toml
tools/menu_designer/src/: control.py  menu_designer.py  preview.py
tools/menu_designer/templates/: background.j2  background_html.j2  button.j2  button_html.j2  menu.c.j2  menu.c_html.j2  menu.h.j2  menu.h_html.j2
(+67 files in other folders)
